--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -16,6 +16,10 @@ security:
         main:
             lazy: true
             provider: app_user_provider
+            logout:
+                path: app_logout
+
+                target: app_login
 
             form_login:
                 login_path: app_login
@@ -30,8 +34,9 @@ security:
     # Easy way to control access for large sections of your site
     # Note: Only the *first* access control that matches will be used
     access_control:
+        - { path: /admin, roles: [ROLE_ ADMIN] }
         - { path: ^/back-office, roles: [ROLE_EMPLOYEE, ROLE_ ADMIN] }
-        # - { path: ^/profile, roles: ROLE_USER }
+       
     
     role_hierarchy:
         ROLE_ADMIN:       ROLE_EMPLOYEE
