--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -34,7 +34,7 @@ security:
     # Easy way to control access for large sections of your site
     # Note: Only the *first* access control that matches will be used
     access_control:
-        - { path: /admin, roles: [ROLE_ ADMIN] }
+        - { path: ^back-office/admin, roles: ROLE_ ADMIN }
         - { path: ^/back-office, roles: [ROLE_EMPLOYEE, ROLE_ ADMIN] }
        
     
