--- a/config/services.yaml
+++ b/config/services.yaml
@@ -4,7 +4,8 @@
 # Put parameters here that don't need to change on each machine where the app is deployed
 # https://symfony.com/doc/current/best_practices.html#use-parameters-for-application-configuration
 parameters:
-
+    image_directory: '%kernel.project_dir%/public/car_uploads'
+    service_directory: '%kernel.project_dir%/public/service_uploads'
 services:
     # default configuration for services in *this* file
     _defaults:
