ajout de rate limit bundle pour protéger le formulaire de connexion contre trop de tentatives de connexion

--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -14,7 +14,10 @@ security:
             pattern: ^/(_(profiler|wdt)|css|images|js)/
             security: false
         main:
-            login_throttling:  
+            login_throttling: 
+                        max_attempts: 5
+                        interval: '10 minutes'
+
             lazy: true
             provider: app_user_provider
             logout:
