--- a/composer.json
+++ b/composer.json
@@ -22,8 +22,10 @@
         "symfony/flex": "^2",
         "symfony/form": "6.3.*",
         "symfony/framework-bundle": "6.3.*",
+        "symfony/html-sanitizer": "6.3.*",
         "symfony/http-client": "6.3.*",
         "symfony/intl": "6.3.*",
+        "symfony/lock": "6.3.*",
         "symfony/mailer": "6.3.*",
         "symfony/mime": "6.3.*",
         "symfony/monolog-bundle": "^3.0",
