--- a/composer.json
+++ b/composer.json
@@ -79,7 +79,7 @@
         "auto-scripts": {
             "cache:clear": "symfony-cmd",
             "assets:install %PUBLIC_DIR%": "symfony-cmd",
-            "requirements-checker": "script"
+            "requirements-checker": "php-script"
         },
         "post-install-cmd": [
             "@auto-scripts"
