--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -38,8 +38,8 @@ security:
     # Easy way to control access for large sections of your site
     # Note: Only the *first* access control that matches will be used
     access_control:
-        # - { path: ^/back-office/admin, roles: ROLE_ADMIN }
-        # - { path: ^/back-office, roles: [ROLE_EMPLOYEE, ROLE_ADMIN] }
+        - { path: ^/back-office/admin, roles: ROLE_ADMIN }
+        - { path: ^/back-office, roles: [ROLE_EMPLOYEE, ROLE_ADMIN] }
        
     
     role_hierarchy:
